add linux to distrochooser

--- a/linux-present.html
+++ b/linux-present.html
@@ -33,74 +33,74 @@
 Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.de</a>
 </section>
 <section>
-<section id="slide-orgd34e940">
-<h2 id="orgd34e940"><span class="section-number-2">1.</span> Contents</h2>
+<section id="slide-org2e3693f">
+<h2 id="org2e3693f"><span class="section-number-2">1.</span> Contents</h2>
 <ul>
-<li><a href="#/slide-orgd34e940">Contents</a></li>
-<li><a href="#/slide-org7a4497b">The issue(s)</a>
+<li><a href="#/slide-org2e3693f">Contents</a></li>
+<li><a href="#/slide-orga8325d0">The issue(s)</a>
 <ul>
-<li><a href="#/slide-org9fceaad">Windows 11 features 1 / 2</a></li>
-<li><a href="#/slide-org687a8d0">Windows 11 features 2 / 2</a></li>
+<li><a href="#/slide-org85c84a8">Windows 11 features 1 / 2</a></li>
+<li><a href="#/slide-org14c4dec">Windows 11 features 2 / 2</a></li>
 
 </ul></li>
-<li><a href="#/slide-orgca9a3f4">The Penguin</a>
+<li><a href="#/slide-orgf52f0ca">The Penguin</a>
 <ul>
-<li><a href="#/slide-org5debf5e">Linux</a></li>
-<li><a href="#/slide-org3f76aaa">Problems solved</a></li>
-<li><a href="#/slide-org9ff4982">Problems introduced</a></li>
-
-</ul></li>
-
-</ul>
-</section>
-<section id="slide-orgd34e940-split">
-<ul>
-<li><a href="#/slide-org1bbc4d6">Addressing the issues</a>
-<ul>
-<li><a href="#/slide-org36c8d4f">Installing a linux</a></li>
-<li><a href="#/slide-orgc7d7e40">The Kernel</a></li>
-<li><a href="#/slide-orga4a23b1">The Distro</a></li>
-<li><a href="#/slide-org9ebc3e3">Family tree</a></li>
+<li><a href="#/slide-orgad774d5">Linux</a></li>
+<li><a href="#/slide-orgea75c09">Problems solved</a></li>
+<li><a href="#/slide-orga300321">Problems introduced</a></li>
 
 </ul></li>
 
 </ul>
 </section>
-<section id="slide-orgd34e940-split">
+<section id="slide-org2e3693f-split">
 <ul>
-<li><a href="#/slide-org3c50a86">Linux intro</a>
+<li><a href="#/slide-org8214856">Addressing the issues</a>
 <ul>
-<li><a href="#/slide-orgde70f48">Multiuser, timesharing system</a></li>
-<li><a href="#/slide-org7240dbe">Basic terminal usage</a></li>
-<li><a href="#/slide-org4bbdd13">Package management</a></li>
-<li><a href="#/slide-org469945e">Change username, password, permissions, ownership</a></li>
-<li><a href="#/slide-org67ca8fa">Change hostname</a></li>
+<li><a href="#/slide-orgbd73e3e">Installing a linux</a></li>
+<li><a href="#/slide-orga56abd4">The Kernel</a></li>
+<li><a href="#/slide-org6f60495">The Distro</a></li>
+<li><a href="#/slide-org290c88b">Family tree</a></li>
 
 </ul></li>
 
 </ul>
 </section>
-<section id="slide-orgd34e940-split">
+<section id="slide-org2e3693f-split">
 <ul>
-<li><a href="#/slide-orge93cbe9">Networking</a></li>
-<li><a href="#/slide-org86cb7ce">Sound setup</a></li>
-<li><a href="#/slide-org2039234">Bluetooth</a></li>
-<li><a href="#/slide-org283840b">Text editing inside terminal</a></li>
-<li><a href="#/slide-orgce4e390">Breaking your system</a></li>
-<li><a href="#/slide-org4131557">Fixing it</a></li>
-<li><a href="#/slide-org493b2e0">Getting help</a></li>
-<li><a href="#/slide-org3aa1cad">Bonus</a></li>
+<li><a href="#/slide-orgeef003a">Linux intro</a>
+<ul>
+<li><a href="#/slide-orga9b06ae">Multiuser, timesharing system</a></li>
+<li><a href="#/slide-org9573381">Basic terminal usage</a></li>
+<li><a href="#/slide-org964fd5d">Package management</a></li>
+<li><a href="#/slide-org6b9c244">Change username, password, permissions, ownership</a></li>
+<li><a href="#/slide-org50cc098">Change hostname</a></li>
+
+</ul></li>
+
+</ul>
+</section>
+<section id="slide-org2e3693f-split">
+<ul>
+<li><a href="#/slide-orgc776972">Networking</a></li>
+<li><a href="#/slide-org8a8f5b7">Sound setup</a></li>
+<li><a href="#/slide-org2a2786d">Bluetooth</a></li>
+<li><a href="#/slide-org40b9f8f">Text editing inside terminal</a></li>
+<li><a href="#/slide-orgd317592">Breaking your system</a></li>
+<li><a href="#/slide-orgc01ecac">Fixing it</a></li>
+<li><a href="#/slide-org65c8a6f">Getting help</a></li>
+<li><a href="#/slide-org197ed98">Bonus</a></li>
 
 </ul>
 <ul>
-<li><a href="#/slide-org742b158">Footnotes</a></li>
+<li><a href="#/slide-org48efa59">Footnotes</a></li>
 
 </ul>
 </section>
 </section>
 <section>
-<section id="slide-org7a4497b">
-<h2 id="org7a4497b"><span class="section-number-2">2.</span> The issue(s)</h2>
+<section id="slide-orga8325d0">
+<h2 id="orga8325d0"><span class="section-number-2">2.</span> The issue(s)</h2>
 <ul>
 <li>Windows 10 EOL in October 2025
 <ul>
@@ -122,8 +122,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org9fceaad">
-<h3 id="org9fceaad"><span class="section-number-3">2.1.</span> Windows 11 features 1 / 2</h3>
+<section id="slide-org85c84a8">
+<h3 id="org85c84a8"><span class="section-number-3">2.1.</span> Windows 11 features 1 / 2</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -166,8 +166,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 </tbody>
 </table>
 </section>
-<section id="slide-org687a8d0">
-<h3 id="org687a8d0"><span class="section-number-3">2.2.</span> Windows 11 features 2 / 2</h3>
+<section id="slide-org14c4dec">
+<h3 id="org14c4dec"><span class="section-number-3">2.2.</span> Windows 11 features 2 / 2</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -212,8 +212,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 </section>
 </section>
 <section>
-<section id="slide-orgca9a3f4">
-<h2 id="orgca9a3f4"><span class="section-number-2">3.</span> The Penguin</h2>
+<section id="slide-orgf52f0ca">
+<h2 id="orgf52f0ca"><span class="section-number-2">3.</span> The Penguin</h2>
 <p height="50px">
 <img src="./img/Tux.png" alt="Tux.png" height="50px" /> <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup>
 </p>
@@ -223,8 +223,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org5debf5e">
-<h3 id="org5debf5e"><span class="section-number-3">3.1.</span> Linux</h3>
+<section id="slide-orgad774d5">
+<h3 id="orgad774d5"><span class="section-number-3">3.1.</span> Linux</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -277,8 +277,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 </tbody>
 </table>
 </section>
-<section id="slide-org3f76aaa">
-<h3 id="org3f76aaa"><span class="section-number-3">3.2.</span> Problems solved</h3>
+<section id="slide-orgea75c09">
+<h3 id="orgea75c09"><span class="section-number-3">3.2.</span> Problems solved</h3>
 <ul>
 <li>hardware obsolescence</li>
 <li>bluescreens</li>
@@ -286,8 +286,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org9ff4982">
-<h3 id="org9ff4982"><span class="section-number-3">3.3.</span> Problems introduced</h3>
+<section id="slide-orga300321">
+<h3 id="orga300321"><span class="section-number-3">3.3.</span> Problems introduced</h3>
 <ul>
 <li>manual installation</li>
 <li>manual configuration</li>
@@ -299,8 +299,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 </section>
 </section>
 <section>
-<section id="slide-org1bbc4d6">
-<h2 id="org1bbc4d6"><span class="section-number-2">4.</span> Addressing the issues</h2>
+<section id="slide-org8214856">
+<h2 id="org8214856"><span class="section-number-2">4.</span> Addressing the issues</h2>
 <ul>
 <li>install a linux system on your personal hardware</li>
 <li>get tips for basic configuration</li>
@@ -309,8 +309,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org36c8d4f">
-<h3 id="org36c8d4f"><span class="section-number-3">4.1.</span> Installing a linux</h3>
+<section id="slide-orgbd73e3e">
+<h3 id="orgbd73e3e"><span class="section-number-3">4.1.</span> Installing a linux</h3>
 <ul>
 <li>distribution (distro)</li>
 <li>bundle software which mostly works well together</li>
@@ -320,8 +320,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-orgc7d7e40">
-<h3 id="orgc7d7e40"><span class="section-number-3">4.2.</span> The Kernel</h3>
+<section id="slide-orga56abd4">
+<h3 id="orga56abd4"><span class="section-number-3">4.2.</span> The Kernel</h3>
 <ul>
 <li>provides inner workings of the OS:
 <ul>
@@ -336,8 +336,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-orga4a23b1">
-<h3 id="orga4a23b1"><span class="section-number-3">4.3.</span> The Distro</h3>
+<section id="slide-org6f60495">
+<h3 id="org6f60495"><span class="section-number-3">4.3.</span> The Distro</h3>
 <ul>
 <li>Debian -&gt; Ubuntu -&gt; Mint</li>
 <li>Debian -&gt; Ubuntu -&gt; Kubuntu</li>
@@ -350,10 +350,12 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 <li>Arch -&gt; Manjaro</li>
 
+<li><a href="https://distrochooser.de/de">https://distrochooser.de/de</a></li>
+
 </ul>
 </section>
-<section id="slide-org9ebc3e3">
-<h3 id="org9ebc3e3"><span class="section-number-3">4.4.</span> Family tree</h3>
+<section id="slide-org290c88b">
+<h3 id="org290c88b"><span class="section-number-3">4.4.</span> Family tree</h3>
 <ul>
 <li>do not be scared</li>
 
@@ -369,8 +371,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 </section>
 </section>
 <section>
-<section id="slide-org3c50a86">
-<h2 id="org3c50a86"><span class="section-number-2">5.</span> Linux intro</h2>
+<section id="slide-orgeef003a">
+<h2 id="orgeef003a"><span class="section-number-2">5.</span> Linux intro</h2>
 <ul>
 <li>it's okay not to remember everything</li>
 <li>it will help though</li>
@@ -378,16 +380,16 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-orgde70f48">
-<h3 id="orgde70f48"><span class="section-number-3">5.1.</span> Multiuser, timesharing system</h3>
+<section id="slide-orga9b06ae">
+<h3 id="orga9b06ae"><span class="section-number-3">5.1.</span> Multiuser, timesharing system</h3>
 <ul>
 <li>users, groups, permissions</li>
 <li>unix-like</li>
 
 </ul>
 </section>
-<section id="slide-org7240dbe">
-<h3 id="org7240dbe"><span class="section-number-3">5.2.</span> Basic terminal usage</h3>
+<section id="slide-org9573381">
+<h3 id="org9573381"><span class="section-number-3">5.2.</span> Basic terminal usage</h3>
 <ul>
 <li><code>sudo</code>, <code>su</code></li>
 <li><code>cd</code>, <code>ls</code>, <code>cp</code>, <code>mv</code>, <code>cat</code>, <code>head</code>, <code>tail</code></li>
@@ -399,8 +401,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org4bbdd13">
-<h3 id="org4bbdd13"><span class="section-number-3">5.3.</span> Package management</h3>
+<section id="slide-org964fd5d">
+<h3 id="org964fd5d"><span class="section-number-3">5.3.</span> Package management</h3>
 <ul>
 <li><code>apt install</code>, <code>dpkg -i</code></li>
 <li><code>rpm -i</code>, <code>yum install</code>, <code>dnf install</code></li>
@@ -410,8 +412,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org469945e">
-<h3 id="org469945e"><span class="section-number-3">5.4.</span> Change username, password, permissions, ownership</h3>
+<section id="slide-org6b9c244">
+<h3 id="org6b9c244"><span class="section-number-3">5.4.</span> Change username, password, permissions, ownership</h3>
 <ul>
 <li><code>usermod</code></li>
 <li><code>passwd</code></li>
@@ -420,8 +422,8 @@ Lorenz Schwab <br/> <a href="mailto:lorenz.schwab@blank.de">lorenz.schwab@blank.
 
 </ul>
 </section>
-<section id="slide-org67ca8fa">
-<h3 id="org67ca8fa"><span class="section-number-3">5.5.</span> Change hostname</h3>
+<section id="slide-org50cc098">
+<h3 id="org50cc098"><span class="section-number-3">5.5.</span> Change hostname</h3>
 <p>
 edit the following files:
 </p>
@@ -439,8 +441,8 @@ you will need:
 
 </ul>
 </section>
-<section id="slide-orge93cbe9">
-<h3 id="orge93cbe9"><span class="section-number-3">5.6.</span> Networking</h3>
+<section id="slide-orgc776972">
+<h3 id="orgc776972"><span class="section-number-3">5.6.</span> Networking</h3>
 <ul>
 <li><code>NetworkManager</code>
 <ul>
@@ -461,8 +463,8 @@ you will need:
 
 </ul>
 </section>
-<section id="slide-org86cb7ce">
-<h3 id="org86cb7ce"><span class="section-number-3">5.7.</span> Sound setup</h3>
+<section id="slide-org8a8f5b7">
+<h3 id="org8a8f5b7"><span class="section-number-3">5.7.</span> Sound setup</h3>
 <ul>
 <li>alsa</li>
 <li>pulse audio</li>
@@ -471,8 +473,8 @@ you will need:
 
 </ul>
 </section>
-<section id="slide-org2039234">
-<h3 id="org2039234"><span class="section-number-3">5.8.</span> Bluetooth</h3>
+<section id="slide-org2a2786d">
+<h3 id="org2a2786d"><span class="section-number-3">5.8.</span> Bluetooth</h3>
 <ul>
 <li>bluez</li>
 <li>bluetoothctl</li>
@@ -480,8 +482,8 @@ you will need:
 
 </ul>
 </section>
-<section id="slide-org283840b">
-<h3 id="org283840b"><span class="section-number-3">5.9.</span> Text editing inside terminal</h3>
+<section id="slide-org40b9f8f">
+<h3 id="org40b9f8f"><span class="section-number-3">5.9.</span> Text editing inside terminal</h3>
 <ul>
 <li><code>vi</code>, <code>vim</code>, <code>nvim</code></li>
 <li><code>nano</code>, <code>pico</code>, <code>micro</code></li>
@@ -496,8 +498,8 @@ honorable mention to:
 
 </ul>
 </section>
-<section id="slide-orgce4e390">
-<h3 id="orgce4e390"><span class="section-number-3">5.10.</span> Breaking your system</h3>
+<section id="slide-orgd317592">
+<h3 id="orgd317592"><span class="section-number-3">5.10.</span> Breaking your system</h3>
 <ul>
 <li>it's easy</li>
 <li>delete some important file</li>
@@ -509,8 +511,8 @@ honorable mention to:
 
 </ul>
 </section>
-<section id="slide-org4131557">
-<h3 id="org4131557"><span class="section-number-3">5.11.</span> Fixing it</h3>
+<section id="slide-orgc01ecac">
+<h3 id="orgc01ecac"><span class="section-number-3">5.11.</span> Fixing it</h3>
 <ul>
 <li>it's usually not hard</li>
 <li>you might learn something</li>
@@ -522,8 +524,8 @@ honorable mention to:
 
 </ul>
 </section>
-<section id="slide-org493b2e0">
-<h3 id="org493b2e0"><span class="section-number-3">5.12.</span> Getting help</h3>
+<section id="slide-org65c8a6f">
+<h3 id="org65c8a6f"><span class="section-number-3">5.12.</span> Getting help</h3>
 <ul>
 <li>ask colleagues</li>
 <li>web search</li>
@@ -535,8 +537,8 @@ honorable mention to:
 
 </ul>
 </section>
-<section id="slide-org3aa1cad">
-<h3 id="org3aa1cad"><span class="section-number-3">5.13.</span> Bonus</h3>
+<section id="slide-org197ed98">
+<h3 id="org197ed98"><span class="section-number-3">5.13.</span> Bonus</h3>
 <ul>
 <li>If you want to go above and beyond</li>
 <li>If you want to learn more about linux</li>
